div with class testimonials changed to section and tag with class testimonials__user-name changed to tag p

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
         rel="stylesheet">
 </head>
 <body>
-<div class="testimonials">
+<section class="testimonials">
   <div class="container">
     <div class="testimonials__block">
       <h2 class="testimonials__title">Testimonials</h2>
       <div class="testimonials__wrap-cards">
         <div class="testimonials__card">
-          <h6 class="testimonials__user-name">
+          <p class="testimonials__user-name">
             Mark B.
-          </h6>
+          </p>
           <div class="testimonials__box-stars">
             <img src="./img/Star.png" alt="star" width="16" height="15">
             <img src="./img/Star.png" alt="star" width="16" height="15">
@@ -35,9 +35,9 @@
         </div>
 
         <div class="testimonials__card">
-          <h6 class="testimonials__user-name">
+          <p class="testimonials__user-name">
             Mark B.
-          </h6>
+          </p>
           <div class="testimonials__box-stars">
             <img src="./img/Star.png" alt="star" width="16" height="15">
             <img src="./img/Star.png" alt="star" width="16" height="15">
@@ -51,9 +51,9 @@
         </div>
 
         <div class="testimonials__card">
-          <h6 class="testimonials__user-name">
+          <p class="testimonials__user-name">
             Mark B.
-          </h6>
+          </p>
           <div class="testimonials__box-stars">
             <img src="./img/Star.png" alt="star" width="16" height="15">
             <img src="./img/Star.png" alt="star" width="16" height="15">
@@ -69,6 +69,6 @@
       <a href="" class="testimonials__link">All Testimonials</a>
     </div>
   </div>
-</div>
+</section>
 </body>
 </html>
